Add custom exception classes for handling specific cases
- Added CurrencyExistsException and updated related methods
- Added ExchangeRateExistsException and updated related methods
- Added ExchangeRateNotFoundException and updated related methods