@@ -2,8 +2,8 @@ package com.currencyexchange.controller;
 
 import com.currencyexchange.dto.CurrencyDTO;
 import com.currencyexchange.dto.ErrorResponseDTO;
+import com.currencyexchange.exception.CurrencyExistsException;
 import com.currencyexchange.exception.DatabaseUnavailableException;
-import com.currencyexchange.exception.InvalidCurrencyCodeException;
 import com.currencyexchange.exception.InvalidFieldsException;
 import com.currencyexchange.service.CurrencyService;
 import com.currencyexchange.service.CurrencyServiceImpl;
@@ -13,15 +13,11 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 
 import java.io.IOException;
-import java.sql.SQLException;
-import java.util.Arrays;
 import java.util.List;
 
 @WebServlet(name = "CurrenciesServlet", urlPatterns = "/currencies")
 public class CurrenciesServlet extends BaseServlet {
     private final CurrencyService currencyService = new CurrencyServiceImpl();
-    private static final String ERROR_CURRENCY_EXISTS = "Currency with this code already exists";
-    private static final int ERROR_CODE_SQLITE_CONSTRAINT = 19;
 
     @Override
     protected void doGet(HttpServletRequest request, HttpServletResponse response) throws IOException {
@@ -40,32 +36,25 @@ public class CurrenciesServlet extends BaseServlet {
         String name = request.getParameter("name");
         String code = request.getParameter("code");
         String sign = request.getParameter("sign");
-        List<String> fields = Arrays.asList(name, code, sign);
+        List<String> fields = List.of(name, code, sign);
 
         try {
             Validator.validateFields(fields);
+
+            CurrencyDTO newCurrency = new CurrencyDTO(null, name, code, sign);
+            CurrencyDTO addedCurrency = currencyService.addCurrency(newCurrency);
+            response.setStatus(HttpServletResponse.SC_CREATED);
+            objectMapper.writeValue(printWriter, addedCurrency);
+
         } catch (InvalidFieldsException e) {
             response.setStatus(HttpServletResponse.SC_BAD_REQUEST);
             objectMapper.writeValue(printWriter, new ErrorResponseDTO(e.getMessage()));
-            return;
-        }
-
-        try {
-            CurrencyDTO newCurrency = new CurrencyDTO(null, name, code, sign);
-            CurrencyDTO addedCurrency = currencyService.addCurrency(newCurrency);
-
-            response.setStatus(HttpServletResponse.SC_CREATED);
-            objectMapper.writeValue(printWriter, addedCurrency);
+        } catch (CurrencyExistsException e) {
+            response.setStatus(HttpServletResponse.SC_CONFLICT);
+            objectMapper.writeValue(printWriter, new ErrorResponseDTO(e.getMessage()));
         } catch (DatabaseUnavailableException e) {
-            SQLException t = (SQLException) e.getCause();
-
-            if (t.getErrorCode() == ERROR_CODE_SQLITE_CONSTRAINT) {
-                response.setStatus(HttpServletResponse.SC_CONFLICT);
-                objectMapper.writeValue(printWriter, new ErrorResponseDTO(ERROR_CURRENCY_EXISTS));
-            } else {
-                response.setStatus(HttpServletResponse.SC_INTERNAL_SERVER_ERROR);
-                objectMapper.writeValue(printWriter, new ErrorResponseDTO(e.getMessage()));
-            }
+            response.setStatus(HttpServletResponse.SC_INTERNAL_SERVER_ERROR);
+            objectMapper.writeValue(printWriter, new ErrorResponseDTO(e.getMessage()));
         }
     }
 
